crates/mun_codegen/src/snapshots/test__never_conditional_return_expr_file_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main(a:int):int {\n    if a > 4 {\n        return a;\n    } else {\n        return a - 1;\n    }\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

define i64 @main(i64) {
body:
  %greater = icmp sgt i64 %0, 4
  br i1 %greater, label %then, label %else

then:                                             ; preds = %body
  ret i64 %0

else:                                             ; preds = %body
  %sub = sub i64 %0, 1
  ret i64 %sub
}

