crates/mun_codegen/src/snapshots/test__return_expr.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn main():int {\n    return 5;\n    let a = 3; // Nothing regarding this statement should be in the IR\n}"
---
; ModuleID = 'main.mun'
source_filename = "main.mun"

define i64 @main() {
body:
  ret i64 5
}

