crates/mun_codegen/src/snapshots/test__shadowing_group_ir.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn foo(a:int):int {\n    let a = a+1;\n    {\n        let a = a+2;\n    }\n    a+3\n}\n\nfn bar(a:int):int {\n    let a = a+1;\n    let a = {\n        let a = a+2;\n        a\n    }\n    a+3\n}"
---
; ModuleID = 'group_name'
source_filename = "group_name"

