crates/mun_codegen/src/snapshots/test__unary_expressions.snap
---
source: crates/mun_codegen/src/test.rs
expression: "pub fn negf(x: float) -> float {\n    -x\n}\n\npub fn negi(x: int) -> int {\n    -x\n}\n\npub fn notb(x: bool) -> bool {\n    !x\n}\n\npub fn noti(x: int) -> int {\n    !x\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@global_type_table = external global [3 x %struct.MunTypeInfo addrspace(4)*]

define double @negf(double) {
body:
  %neg = fsub double -0.000000e+00, %0
  ret double %neg
}

define i64 @negi(i64) {
body:
  %neg = sub i64 0, %0
  ret i64 %neg
}

define i1 @notb(i1) {
body:
  %not = xor i1 %0, true
  ret i1 %not
}

define i64 @noti(i64) {
body:
  %not = xor i64 %0, -1
  ret i64 %not
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%struct.MunTypeInfo = type { [16 x i8], i8 addrspace(4)*, i32, i8, i8 }

@"type_info::<core::i64>::name" = private unnamed_addr constant [10 x i8] c"core::i64\00"
@"type_info::<core::i64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"G\13;t\97j8\18\D7M\83`\1D\C8\19%", [10 x i8]* @"type_info::<core::i64>::name", i32 64, i8 8, i8 0 }
@"type_info::<core::f64>::name" = private unnamed_addr constant [10 x i8] c"core::f64\00"
@"type_info::<core::f64>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"`\DBF\9C?YJ%G\AD4\9F\D5\92%A", [10 x i8]* @"type_info::<core::f64>::name", i32 64, i8 8, i8 0 }
@"type_info::<core::bool>::name" = private unnamed_addr constant [11 x i8] c"core::bool\00"
@"type_info::<core::bool>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"x\82\81m t7\03\CB\F8k\81-;\C9\84", [11 x i8]* @"type_info::<core::bool>::name", i32 1, i8 1, i8 0 }
@global_type_table = global [3 x %struct.MunTypeInfo addrspace(4)*] [%struct.MunTypeInfo addrspace(4)* @"type_info::<core::i64>", %struct.MunTypeInfo addrspace(4)* @"type_info::<core::f64>", %struct.MunTypeInfo addrspace(4)* @"type_info::<core::bool>"]

