crates/mun_codegen/src/snapshots/test__void_return.snap
---
source: crates/mun_codegen/src/test.rs
expression: "fn bar() {\n    let a = 3;\n}\npub fn foo(a:i32) {\n    let c = bar()\n}"
---
; == FILE IR =====================================
; ModuleID = 'main.mun'
source_filename = "main.mun"

%DispatchTable = type { void ()* }
%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@dispatchTable = external global %DispatchTable
@global_type_table = external global [1 x %struct.MunTypeInfo*]

define void @bar() {
body:
  ret void
}

define void @foo(i32) {
body:
  %bar_ptr = load void ()*, void ()** getelementptr inbounds (%DispatchTable, %DispatchTable* @dispatchTable, i32 0, i32 0)
  call void %bar_ptr()
  ret void
}


; == GROUP IR ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { void ()* }
%struct.MunTypeInfo = type { [16 x i8], i8*, i32, i8, i8 }

@dispatchTable = global %DispatchTable { void ()* @bar }
@"type_info::<core::i32>::name" = private unnamed_addr constant [10 x i8] c"core::i32\00"
@"type_info::<core::i32>" = private unnamed_addr constant %struct.MunTypeInfo { [16 x i8] c"\17yzt\19\D62\17\D25\95C\17\88[\FA", i8* getelementptr inbounds ([10 x i8], [10 x i8]* @"type_info::<core::i32>::name", i32 0, i32 0), i32 32, i8 4, i8 0 }
@global_type_table = constant [1 x %struct.MunTypeInfo*] [%struct.MunTypeInfo* @"type_info::<core::i32>"]

declare void @bar()

